fix background image

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 /* header styling */
 .banner-wrap{
-  background-image: url(./assets/IMG_1201.jpeg);
+  background-image: url(./assets/backgroun-image.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
